--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "TrickyAbhi-Bot",
+    "name": "Naruto Bot",
     "description": "Telegram group management bot.",
     "keywords": [
        "telegram",
@@ -8,7 +8,7 @@
        "manager",
        "yone"
     ],   
- "repository": "https://github.com/SJMxADITI/TrickyAbhi-Bot",
+ "repository": "https://github.com/aditya10230/ANIME-FREAKS",
  "addons": [
     {
        "options": {
